--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
             <h3>Object Name:</h3>
             <br>
             <input></input>
+            <br><br><br>
+            <button onclick="start()" class="start">Start</button>
+            <br><br><br>
+            <div class="btn btn-danger"></div>
+            <div class="btn btn-primary"></div>
+            <br><br><br>
+            <canvas class="canvas"></canvas>
             
         </div>
 
